Apply the pending rotation immediately when new request is made while waiting for copy.

Requesting new rotation while coyping layer used to cancel
the existing rotation and moved to new one, which was causing
an issue in Android CTS. Instead, apply the requested orientation
immediately and move to next rotation.

This still skips the pending request if yet another request is made
while doing rotation animation. I don't think this will cause issues
on Andrid so I'm leaving it as is.

Bug: 891737
Test: covered by unittests.

Change-Id: Ic558ecccf594664d1f7b91b830aca33f5ba89d9f
Reviewed-on: https://chromium-review.googlesource.com/c/1257143
Commit-Queue: Mitsuru Oshima <oshima@chromium.org>
Reviewed-by: Tao Wu <wutao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#596867}